@@ -73,21 +73,26 @@ man(1), man(7), http://www.tldp.org/HOWTO/Man-Page/
     </cmdsynopsis>
     <cmdsynopsis>
       <command>&dhpackage;</command>
+      <arg choice="plain">--create-db</arg>
       <arg choice="opt"><option>--var_dir=</option><replaceable class="option">var_directory</replaceable></arg>
-      <arg choice="opt"><option>--create-db</option></arg>
+    </cmdsynopsis>
+    <cmdsynopsis>
+      <command>&dhpackage;</command>
+      <arg choice="plain">--generate-config</arg>
+      <arg choice="opt"><option>…</option></arg>
     </cmdsynopsis>
     <cmdsynopsis>
       <command>&dhpackage;</command>
       <!-- Normally the help and version options make the programs stop
            right after outputting the requested information. -->
-      <group choice="opt">
-        <arg choice="plain">
+      <group choice="plain">
+        <arg choice="req">
           <group choice="req">
             <arg choice="plain"><option>-h</option></arg>
             <arg choice="plain"><option>--help</option></arg>
           </group>
+          <arg choice="plain"><option>--version</option></arg>
         </arg>
-        <arg choice="plain"><option>--version</option></arg>
       </group>
     </cmdsynopsis>
   </refsynopsisdiv>
@@ -190,6 +195,12 @@ man(1), man(7), http://www.tldp.org/HOWTO/Man-Page/
                 <para>Use the specific path <replaceable>var_directory</replaceable> to look for (or create) var files (ie. database) instead of looking at the default user data location.<sbr />Default is to look in <envar>$XDG_DATA_HOME/mpd_sima/</envar>.  Concerning <envar>$XDG_DATA_HOME</envar> see also <xref linkend="files"/></para>
             </listitem>
         </varlistentry>
+        <varlistentry> <!-- generate-config -->
+            <term><option>--generate-config</option></term>
+            <listitem>
+                <para>Generate a sample configuration file according to the current configuration. You can put other options with this one to get them in the generated configuration.</para>
+            </listitem>
+        </varlistentry>
         <varlistentry> <!-- create-db -->
             <term><option>--create-db</option></term>
             <listitem>
@@ -250,12 +261,8 @@ man(1), man(7), http://www.tldp.org/HOWTO/Man-Page/
               <term>DEFAULTS</term>
               <listitem>
                   <para>Default is to look for MPD server at localhost:6600 (or MPD_HOST/MPD_PORT env. var. if set).</para>
-                        <para>The default behavior is to add one track, this
-                            track is to be chosen among titles from artists
-                            similar to the last artist in the queue.  MPD_sima
-                            will add one track when the unplayed queue is one
-                            track long.</para>
-                  <para>To change these defaults, use the configuration file <filename>mpd_sima.cfg</filename></para>
+                  <para>The get the defaults as detected by &dhpackage; on your system you can run &dhpackage; to print the config:</para>
+                  <para><command>&dhpackage; --generate-config</command></para>
               </listitem>
           </varlistentry>
       </variablelist>
